Fix h1 text-align

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-
 $padding16: 16px;
 
 @mixin boxShadow ($shadowColor: red) {
@@ -75,18 +74,18 @@ body {
   } 
   
   h1,h2,h6 {
-    color: #6b8eff;
-    h1 {
-      text-align: center;
-    }
-    h6 {
-      text-align: center;
-      font-size: 2em;
-      padding: $padding16 *2;
-      margin-bottom: 0px;
-    }
+    color: #6b8eff;  
   }
-  .message, .success, .error, .warning {
+  h1{
+    text-align: center;
+  }
+  h6{
+    text-align: center;
+    font-size: 2em;
+    padding: $padding16 *2;
+    margin-bottom: 0px;
+  }
+  .message {
     border: 1px solid #ccc;
     margin: 16px;
     padding: $padding16;
@@ -94,12 +93,15 @@ body {
     background-color: #000; 
     }
     .success {
+      @extend .message;
       background-color: green;
     }
     .error {
+      @extend .message;
       background-color: red;
     }
     .warning {
+      @extend .message;
       background-color: orange;
   }
   
